Head y Nav echos

--- a/index.html
+++ b/index.html
@@ -12,34 +12,44 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class="text-center">
-    
+<body class=".container-fluid px-1 py-1">
+
     <header>
-        <h1>ASTRON</h1>
+            <div class="row align-items-center">
+                <div class="col">
+                    <h1 class="mx-5">Astron</h1>
+                </div>
+                <div class="col-auto">
+                    <a class="mx-0" href="https://www.instagram.com/pato._r/"><img src="img/ig.png" alt="ig" width="40px" height="40px"></a>
+                    <a class="mx-5" href="https://twitter.com/s0yunQues0"><img src="img/twt.png" alt="ig" width="40px" height="40px"></a>  
+                </div>
+            </div>
     </header>
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-              </li>
-            </ul>
-          </div>
+
+    <nav class="navbar navbar-expand-lg">
+        <div class="mx-3 container-fluid">
+            <a class="navbar-brand" href="#"><img src="img/astronaut.png" alt="astro" width="40px" height="40px"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Location</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
 
