--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
 <body class=".container-fluid px-1 py-1">
 
     <header>
-            <div class="row align-items-center">
-                <div class="col">
-                    <h1 class="mx-5">Astron</h1>
-                </div>
-                <div class="col-auto">
-                    <a class="mx-0" href="https://www.instagram.com/pato._r/"><img src="img/ig.png" alt="ig" width="40px" height="40px"></a>
-                    <a class="mx-5" href="https://twitter.com/s0yunQues0"><img src="img/twt.png" alt="ig" width="40px" height="40px"></a>  
-                </div>
+        <div class="row align-items-center">
+            <div class="col">
+                <h1 class="">Astron</h1>
             </div>
+            <div class="col-auto">
+                <a class="" href="https://www.instagram.com/pato._r/"><img src="img/ig.png" alt="ig" width="40px"
+                        height="40px"></a>
+                <a class="" href="https://twitter.com/s0yunQues0"><img src="img/twt.png" alt="ig" width="45px"
+                        height="45px"></a>
+            </div>
+        </div>
     </header>
 
 
@@ -53,15 +55,13 @@
         </div>
     </nav>
 
+    <main class="Textos px-5 py-5">
+        <h1 class="h1Main">Astron, sumergete en dulzura.</h1>
+        <p class="pMain">¡Descubre la exelencia en cada taza! En nuestro cafe, encontrara una mezcla unica de granos cuidadosamente seleccionados de todo el mundo tostados a la perfeccion para brindarte una experiencia de sabor inigualable. Cada sorbo es una celebracion de calidad y el aroma que solo el mejor cafe puede ofrecer.</p>
+        <button class="botonMain">Visitar</button>
+    </main>
 
-
-
-
-
-
-
-
-
+    <img class="imagenCafe" src="img/Cafe.jpg" alt="cafe" width="100%" height="1080px">
 
 
 
