H2 de quien soy

--- a/index.html
+++ b/index.html
@@ -88,9 +88,15 @@
         </button>
     </div>
 
+    <div class="divQuienesSomos px-5 py-5">
+        <h1 class="h2DivQuienes">¿Quienes somos?</h1>
+        <p class="pDiv">Bienvenidos a Astron, un café ubicado en Lincoln, Buenos Aires. Nos apasiona crear un ambiente cálido y acogedor donde las personas puedan reunirse, relajarse y disfrutar de café de calidad y deliciosa comida. Nuestro dedicado equipo de baristas y chefs se esfuerza por brindar un servicio excepcional y crear experiencias memorables para nuestros apreciados clientes. Ya sea que estés buscando una rápida dosis de cafeína, un rincón acogedor para trabajar o un lugar para ponerte al día con amigos, Astron es el lugar perfecto. Únete a nosotros y disfruta de una encantadora experiencia en nuestro café.
+        </p>
+    </div>
 
+    <div class="div">
 
-
+    </div>
 
 
 
