Hice los servicios

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 
     <main class="Textos px-5 py-5">
-        <h1 class="h1Main">Astron, sumergete en dulzura.</h1>
+        <h2 class="h2Main">Astron, sumergete en dulzura.</h2>
         <p class="pMain">¡Descubre la exelencia en cada taza! En nuestro cafe, encontrara una mezcla unica de granos
             cuidadosamente seleccionados de todo el mundo tostados a la perfeccion para brindarte una experiencia de
             sabor inigualable. Cada sorbo es una celebracion de calidad y el aroma que solo el mejor cafe puede ofrecer.
@@ -89,13 +89,53 @@
     </div>
 
     <div class="divQuienesSomos px-5 py-5">
-        <h1 class="h2DivQuienes">¿Quienes somos?</h1>
-        <p class="pDiv">Bienvenidos a Astron, un café ubicado en Lincoln, Buenos Aires. Nos apasiona crear un ambiente cálido y acogedor donde las personas puedan reunirse, relajarse y disfrutar de café de calidad y deliciosa comida. Nuestro dedicado equipo de baristas y chefs se esfuerza por brindar un servicio excepcional y crear experiencias memorables para nuestros apreciados clientes. Ya sea que estés buscando una rápida dosis de cafeína, un rincón acogedor para trabajar o un lugar para ponerte al día con amigos, Astron es el lugar perfecto. Únete a nosotros y disfruta de una encantadora experiencia en nuestro café.
+        <h2 class="h2DivQuienes">¿Quienes somos?</h2>
+        <p class="pDiv">Bienvenidos a Astron, un café ubicado en Lincoln, Buenos Aires. Nos apasiona crear un ambiente
+            cálido y acogedor donde las personas puedan reunirse, relajarse y disfrutar de café de calidad y deliciosa
+            comida. Nuestro dedicado equipo de baristas y chefs se esfuerza por brindar un servicio excepcional y crear
+            experiencias memorables para nuestros apreciados clientes. Ya sea que estés buscando una rápida dosis de
+            cafeína, un rincón acogedor para trabajar o un lugar para ponerte al día con amigos, Astron es el lugar
+            perfecto. Únete a nosotros y disfruta de una encantadora experiencia en nuestro café.
         </p>
     </div>
 
-    <div class="div">
-
+    <div class="h2Servicios px-5">
+        <div class="h2Titulo">
+            <h2>Nuestros Servicios</h2>
+        </div>
+        <div class="card-group divServicios">
+            <div class="card">
+                <img src="img/cafeteria-blur.jpg" class="imagenIzquierda card-img-top" alt="Cafeteria difuminada">
+                <div class="card-body">
+                    <h5 class="card-title">Delivery</h5>
+                    <p class="card-text">Entrega conveniente y puntual de nuestro café recién preparado directamente a
+                        tu puerta.</p>
+                    <p class="card-text"><small class="text-body-secondary">Ultima actualizacion hace 3 minutos</small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/Cafe-tiendaDiv1.jpg" class="imagendelMedio card-img-top" alt="Foto del cafe">
+                <div class="card-body">
+                    <h5 class="card-title">Ambiente Tranquilo</h5>
+                    <p class="card-text">Relájate en nuestra cafeteria, el lugar perfecto para disfrutar de tus bebidas
+                        favoritas y
+                        conectar con amigos.</p>
+                    <p class="card-text"><small class="text-body-secondary">Ultima actualizacion hace 3 minutos</small>
+                    </p>
+                </div>
+            </div>
+            <div class="card">
+                <img src="img/cafe-maquinas.jpg" class="imagen card-img-top" alt="Maquinas de cafe">
+                <div class="card-body">
+                    <h5 class="card-title">Calidad Premium</h5>
+                    <p class="card-text">Déjate llevar por nuestra exquisita variedad de cafés premium cuidadosamente
+                        seleccionados, y elaborados a mano para tu máximo disfrute.</p>
+                    <p class="card-text"><small class="text-body-secondary">Ultima actualizacion hace 3 minutos</small>
+                    </p>
+                </div>
+            </div>
+        </div>
     </div>
 
 
