he echo el formulario de contacto

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </div>
     </header>
 
+    <!-- NAVBAR -->
 
     <nav class="navbar navbar-expand-lg">
         <div class="mx-3 container-fluid">
@@ -64,6 +65,8 @@
         <button class="botonMain">Visitar</button>
     </main>
 
+    <!-- CARRUSEL DE IMAGENES -->
+
     <div id="carouselExampleAutoplaying" class="carrusel mx-0 carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -99,6 +102,8 @@
         </p>
     </div>
 
+    <!-- CARTAS CON LOS SERVIXIOS -->
+
     <div class="h2Servicios px-5">
         <div class="h2Titulo">
             <h2>Nuestros Servicios</h2>
@@ -117,7 +122,7 @@
             <div class="card">
                 <img src="img/Cafe-tiendaDiv1.jpg" class="imagendelMedio card-img-top" alt="Foto del cafe">
                 <div class="card-body">
-                    <h5 class="card-title">Ambiente Tranquilo</h5>
+                    <h5 class="card-title">Ambiente Relajado</h5>
                     <p class="card-text">Relájate en nuestra cafeteria, el lugar perfecto para disfrutar de tus bebidas
                         favoritas y
                         conectar con amigos.</p>
@@ -139,11 +144,44 @@
     </div>
 
 
+    <!-- CONTACTO -->
+    <div class="divContacto">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 textosContacto">
+                    <h2>Contacta con Nosotros</h2>
+                    <p>Completa el formulario para ponerte en contacto con nosotros. Estamos aquí para responder
+                        cualquier pregunta que puedas tener y ofrecer asistencia con cualquiera de nuestros servicios.
+                    </p>
+                </div>
+                <div class="col-md-6">
+                    <form class="formMarg">
+                        <div class="mb-3 row">
+                            <div class="col-md-6">
+                                <label for="Nombres" class="form-label">Nombre</label>
+                                <input type="text" class="form-control" id="Nombres" placeholder="Juan Alberto">
+                            </div>
+                            <div class="col-md-6">
+                                <label for="exampleFormControlInput1" class="form-label">Email</label>
+                                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="juanalberto@mail.com">
+                            </div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
 
 
 
 
-
+    <!-- FOOTER -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
