--- a/index.html
+++ b/index.html
@@ -195,16 +195,24 @@
         </div>
     </div>
 
+    <!-- FOOOTER -->
+
     <footer>
-        <div>
-            
+        <div class="divFooter">
+            <div class="fs-4">
+                <p>Todos los derechos reservados. Astron.</p>
+            </div>
+            <div class="footerIMG">
+                <a href="https://www.instagram.com/pato._r/"><img src="img/ig.png" alt="ig"
+                        width="40px" height="40px"></a>
+                <a href="https://twitter.com/s0yunQues0"><img src="img/twt.png" alt="ig" width="45px"
+                        height="45px"></a>
+            </div>
         </div>
     </footer>
 
 
 
-
-    <!-- FOOTER -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
