--- a/html/ubicacion.html
+++ b/html/ubicacion.html
@@ -46,10 +46,10 @@
                         <a class="nav-link" href="sobreNosotros.html">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Servicios</a>
+                        <a class="nav-link" href="productos.html">Servicios</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ubicacion.html">Ubicacion</a>
+                        <a class="nav-link" href="#">Ubicacion</a>
                     </li>
                 </ul>
             </div>
