--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astron</title>
+    <link rel="shortcut icon" href="../img/astronaut.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -71,15 +72,15 @@
                     supimos que había un largo viaje por delante.</p>
             </div>
             <div>
-                <div class="container imgSNL">
+                <div class="contenedor imgSNL">
                     <img class="bordeImagenes" src="../img/cafeteria-blur.jpg" alt="cafeteria">
                     <p class="textContL">La búsqueda de un lugar adecuado para nuestro café resultó ser una tarea desalentadora. Visitamos innumerables locales, cada uno con sus propios problemas: algunos eran demasiado pequeños, otros demasiado caros, y algunos estaban en ubicaciones que no nos gustaban. Pasamos noches enteras buscando y debatiendo, hasta que finalmente encontramos el espacio perfecto, un pequeño rincón en una calle tranquila que tenía el encanto que buscabamos.</p>
                 </div>
-                <div class="container imgSND">
+                <div class="contenedor imgSND">
                     <p class="textContD">La construcción y la decoración del local también presentaron sus desafíos. Las largas noches de pintura, la instalación de muebles y la decoración meticulosa nos pusieron a prueba. Hubo momentos en los que estábamos agotados y casi listos para abandonar, pero el apoyo mutuo y la visión de nuestro café terminado nos impulsaron a seguir adelante.</p>
                     <img class="bordeImagenes" src="../img/cafe-maquinas.jpg" alt="cafe-maquinas" width="500px" height="500px">
                 </div>
-                <div class="container imgSNL">
+                <div class="contenedor imgSNL">
                     <img class="bordeImagenes" src="../img/Cafe-tiendaDiv1.jpg" alt="taza-de-cafe" width="500px" height="500px">
                     <p class="textContL">Finalmente, llegó el día de la gran apertura. Estábamos llenos de nerviosismo y emoción mientras abríamos las puertas por primera vez. A medida que las primeras personas entraban y disfrutaban de nuestro café recién hecho, supimos que todos los desafíos y obstáculos habían valido la pena.
                     </p>
