--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Astron</title>
-    <link rel="shortcut icon" href="../img/astronaut.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/astronaut.png" type="image/x-icon">
     <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
@@ -145,23 +145,26 @@
     </div>
 
     <!-- MAPA -->
-<div class="divMapa">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="mapa">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4113.156270363254!2d-61.52939545237828!3d-34.86940008900755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c744a7036077cb%3A0xa51ef767db403844!2sLeandro%20N.%20Alem%2C%20Lincoln%2C%20Provincia%20de%20Buenos%20Aires!5e1!3m2!1ses-419!2sar!4v1693500111716!5m2!1ses-419!2sar" width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="divMapa">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4113.156270363254!2d-61.52939545237828!3d-34.86940008900755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c744a7036077cb%3A0xa51ef767db403844!2sLeandro%20N.%20Alem%2C%20Lincoln%2C%20Provincia%20de%20Buenos%20Aires!5e1!3m2!1ses-419!2sar!4v1693500111716!5m2!1ses-419!2sar"
+                            width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <div class="textoMapa">
-                    <h2>Ubicacion</h2>
-                    <p>Lincoln, Buenos Aires</p>
+                <div class="col-md-6">
+                    <div class="textoMapa">
+                        <h2>Ubicacion</h2>
+                        <p>Lincoln, Buenos Aires</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 
     <!-- CONTACTO -->
     <div class="divContacto">
@@ -204,10 +207,9 @@
                 <p>Todos los derechos reservados. Astron.</p>
             </div>
             <div class="footerIMG">
-                <a href="https://www.instagram.com/pato._r/"><img src="img/ig.png" alt="ig"
-                        width="40px" height="40px"></a>
-                <a href="https://twitter.com/s0yunQues0"><img src="img/twt.png" alt="ig" width="45px"
-                        height="45px"></a>
+                <a href="https://www.instagram.com/pato._r/"><img src="img/ig.png" alt="ig" width="40px"
+                        height="40px"></a>
+                <a href="https://twitter.com/s0yunQues0"><img src="img/twt.png" alt="ig" width="45px" height="45px"></a>
             </div>
         </div>
     </footer>
