--- a/html/productos.html
+++ b/html/productos.html
@@ -23,8 +23,8 @@
             <div class="col-auto">
                 <a class="mx-0 my-2" href="https://www.instagram.com/pato._r/"><img src="../img/ig.png" alt="ig"
                         width="40px" height="40px"></a>
-                <a class="mx-3 my-2" href="https://twitter.com/s0yunQues0"><img src="../img/twt.png" alt="ig" width="45px"
-                        height="45px"></a>
+                <a class="mx-3 my-2" href="https://twitter.com/s0yunQues0"><img src="../img/twt.png" alt="ig"
+                        width="45px" height="45px"></a>
             </div>
         </div>
     </header>
@@ -36,7 +36,7 @@
             <a class="navbar-brand" href="#"><img src="../img/astronaut.png" alt="astro" width="40px" height="40px"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
+                <pan class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="sobreNosotros.html">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Servicios</a>
+                        <a class="nav-link" href="#">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ubicacion.html">Ubicacion</a>
@@ -58,10 +58,76 @@
     </nav>
 
     <!-- Contenido -->
-
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, similique! Aspernatur qui a neque quisquam debitis non assumenda sequi impedit necessitatibus. Id, et. Eveniet vel ut quis perferendis minima sit.</p>
-
-
+    <main>
+        <div class="row justify-content-center align-items-center ProductosCards">
+            <div class="col-lg-6 col-md-4 col-sm-2">
+                <div class="ProductosCard" style="width: 35rem;">
+                    <img src="../img/cafe-espresso.jpg" class="card-img-top" alt="Cafe Espresso">
+                    <div class="card-body">
+                        <h5 class="card-title">Espresso</h5>
+                        <p class="card-text">Un café fuerte y concentrado hecho al forzar agua caliente a través de
+                            granos de café molido finamente.</p>
+                        <a href="#" class="btn btn-primary botonProd">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-4 col-sm-2">
+                <div class="ProductosCard" style="width: 35rem;">
+                    <img src="../img/Espresso_Americano.jpeg" class="card-img-top" alt="Cafe Americano">
+                    <div class="card-body">
+                        <h5 class="card-title">Americano</h5>
+                        <p class="card-text">Hecho al diluir un espresso con agua caliente, lo que resulta en un café
+                            más suave y menos concentrado.</p>
+                        <a href="#" class="btn btn-primary botonProd">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-4 col-sm-2">
+                <div class="ProductosCard" style="width: 35rem;">
+                    <img src="../img/Cafe-Latte.jpg" class="card-img-top" alt="Cafe Latte">
+                    <div class="card-body">
+                        <h5 class="card-title">Latte</h5>
+                        <p class="card-text">Una bebida que contiene espresso y leche vaporizada, con una pequeña
+                            cantidad de espuma en la parte superior.</p>
+                        <a href="#" class="btn btn-primary botonProd">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-4 col-sm-2">
+                <div class="ProductosCard" style="width: 35rem;">
+                    <img src="../img/Cafe-capuccino.jpg" class="card-img-top" alt="Cappuccino">
+                    <div class="card-body">
+                        <h5 class="card-title">Cappuccino</h5>
+                        <p class="card-text">Similar al café latte, pero con partes iguales de espresso, leche
+                            vaporizada y espuma de leche.</p>
+                        <a href="#" class="btn btn-primary botonProd">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-4 col-sm-2">
+                <div class="ProductosCard" style="width: 35rem;">
+                    <img src="../img/Macchiato.jpg" class="card-img-top" alt="Macchiato">
+                    <div class="card-body">
+                        <h5 class="card-title">Macchiato</h5>
+                        <p class="card-text">Un espresso "manchado" con una pequeña cantidad de leche vaporizada o
+                            espuma de leche.</p>
+                        <a href="#" class="btn btn-primary botonProd">Comprar</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-4 col-sm-2">
+                <div class="ProductosCard" style="width: 35rem;">
+                    <img src="../img/Cafe-Mocha.jpg" class="card-img-top" alt="Cafe Mocha">
+                    <div class="card-body">
+                        <h5 class="card-title">Mocha</h5>
+                        <p class="card-text">Una mezcla de espresso, leche vaporizada, chocolate y crema batida, lo que
+                            lo hace una opción indulgente y chocolatada.</p>
+                        <a href="#" class="btn btn-primary botonProd">Comprar</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     <!-- FOOOTER -->
@@ -72,8 +138,8 @@
                 <p>Todos los derechos reservados. Astron.</p>
             </div>
             <div class="footerIMG">
-                <a href="https://www.instagram.com/pato._r/"><img src="../img/ig.png" alt="ig"
-                        width="40px" height="40px"></a>
+                <a href="https://www.instagram.com/pato._r/"><img src="../img/ig.png" alt="ig" width="40px"
+                        height="40px"></a>
                 <a href="https://twitter.com/s0yunQues0"><img src="../img/twt.png" alt="ig" width="45px"
                         height="45px"></a>
             </div>
