--- a/html/sobreNosotros.html
+++ b/html/sobreNosotros.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="#">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Servicios</a>
+                        <a class="nav-link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ubicacion.html">Ubicacion</a>
