--- a/html/ubicacion.html
+++ b/html/ubicacion.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="sobreNosotros.html">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="productos.html">Servicios</a>
+                        <a class="nav-link" href="productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Ubicacion</a>
