--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <a class="nav-link" href="html/sobreNosotros.html">Sobre Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/productos.html">Servicios</a>
+                        <a class="nav-link" href="html/productos.html">Productos</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="html/ubicacion.html">Ubicacion</a>
