--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 
-<body class=".container-fluid px-1 py-1">
+<body>
 
     <header>
         <div class="row align-items-center">
@@ -149,7 +149,7 @@
                     <div class="mapa">
                         <iframe
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4113.156270363254!2d-61.52939545237828!3d-34.86940008900755!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95c744a7036077cb%3A0xa51ef767db403844!2sLeandro%20N.%20Alem%2C%20Lincoln%2C%20Provincia%20de%20Buenos%20Aires!5e1!3m2!1ses-419!2sar!4v1693500111716!5m2!1ses-419!2sar"
-                            width="500" height="300" style="border:0;" allowfullscreen="" loading="lazy"
+                            width="320" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                             referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
